--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expensify",
+  "name": "hanematio",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -12,35 +12,37 @@
     "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.4.2",
-    "babel-loader": "^8.0.0",
+    "babel-jest": "^25.3.0",
+    "babel-loader": "^8.1.0",
     "build": "^0.1.4",
-    "css-loader": "0.28.4",
+    "css-loader": "3.5.1",
+    "dev-server": "^0.1.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "moment": "2.18.1",
+    "moment": "2.24.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
-    "react": "16.0.0",
-    "react-addons-shallow-compare": "15.6.0",
-    "react-dates": "12.7.0",
-    "react-dom": "16.0.0",
-    "react-modal": "2.2.2",
-    "react-redux": "5.0.5",
+    "numeral": "^2.0.6",
+    "react": "16.13.1",
+    "react-addons-shallow-compare": "15.6.2",
+    "react-dates": "21.8.0",
+    "react-dom": "16.13.1",
+    "react-modal": "3.11.2",
+    "react-redux": "7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
-    "style-loader": "0.18.2",
+    "style-loader": "1.1.3",
     "uuid": "3.1.0",
-    "validator": "8.0.0",
+    "validator": "13.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   },
@@ -48,8 +50,9 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
-    "jest": "20.0.4",
-    "react-test-renderer": "16.0.0",
+    "jest": "^25.3.0",
+    "raf": "^3.4.1",
+    "react-test-renderer": "16.13.1",
     "webpack-dev-server": "^3.10.3"
   }
 }
