--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -28,18 +28,21 @@
     "dev-server": "^0.1.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "firebase": "^7.14.0",
     "moment": "2.24.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "numeral": "^2.0.6",
-    "react": "16.13.1",
+    "react": "16.8.3",
     "react-addons-shallow-compare": "15.6.2",
     "react-dates": "21.8.0",
-    "react-dom": "16.13.1",
+    "react-dom": "16.8.3",
     "react-modal": "3.11.2",
     "react-redux": "7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.2",
     "style-loader": "1.1.3",
     "uuid": "3.1.0",
@@ -49,6 +52,8 @@
     "yarn": "^1.22.4"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
